--- a/conf/c9.conf
+++ b/conf/c9.conf
@@ -7,3 +7,6 @@ autorestart = true
 stdout_logfile = /var/log/supervisor/cloud9.log
 stderr_logfile = /var/log/supervisor/cloud9_errors.log
 environment = NODE_ENV="production"
+
+[program:dind]
+command=/usr/local/bin/dind
