--- a/conf/c9.conf
+++ b/conf/c9.conf
@@ -1,5 +1,5 @@
 [program:cloud9]
-command = node /c9sdk/server.js
+command = node /c9sdk/server.js -w ~/workspace
 directory = /c9sdk
 user = root
 autostart = true
