--- a/conf/c9.conf
+++ b/conf/c9.conf
@@ -10,3 +10,8 @@ environment = NODE_ENV="production"
 
 [program:dind]
 command=/usr/local/bin/dind
+user = root
+autostart = true
+autorestart = true
+stdout_logfile = /var/log/supervisor/dind.log
+stderr_logfile = /var/log/supervisor/dind_errors.log
