--- a/conf/c9.conf
+++ b/conf/c9.conf
@@ -8,10 +8,10 @@ stdout_logfile = /var/log/supervisor/cloud9.log
 stderr_logfile = /var/log/supervisor/cloud9_errors.log
 environment = NODE_ENV="production"
 
-[program:dind]
-command=/usr/local/bin/dind
-user = root
-autostart = true
-autorestart = true
-stdout_logfile = /var/log/supervisor/dind.log
-stderr_logfile = /var/log/supervisor/dind_errors.log
+#[program:dind]
+#command=/usr/local/bin/dind
+#user = root
+#autostart = true
+#autorestart = true
+#stdout_logfile = /var/log/supervisor/dind.log
+#stderr_logfile = /var/log/supervisor/dind_errors.log
