--- a/conf/c9.conf
+++ b/conf/c9.conf
@@ -1,5 +1,5 @@
 [program:cloud9]
-command = node /c9sdk/server.js -w ~/workspace
+command = node /c9sdk/server.js -w /workspace --listen 0.0.0.0
 directory = /c9sdk
 user = root
 autostart = true
@@ -7,3 +7,30 @@ autorestart = true
 stdout_logfile = /var/log/supervisor/cloud9.log
 stderr_logfile = /var/log/supervisor/cloud9_errors.log
 environment = NODE_ENV="production"
+
+[program:wrapdocker]
+command=/usr/local/bin/wrapdocker
+directory = /
+user = root
+autostart = true
+autorestart = true
+
+[program:nodervisor]
+command = node /nodervisor/app.js
+directory = /nodervisor
+user = root
+autostart = true
+autorestart = true
+stdout_logfile = /var/log/supervisor/nodervisor.log
+stderr_logfile = /var/log/supervisor/nodervisor_errors.log
+environment = NODE_ENV="production"
+
+[program:vnc]
+command = bash -c "vncserver :1 -geometry 1280x800 -depth 24 && tail -F /root/.vnc/*.log"
+directory = /
+user = root
+autostart = true
+autorestart = true
+stdout_logfile = /var/log/supervisor/vnc.log
+stderr_logfile = /var/log/supervisor/vnc_errors.log
+environment = USER="root"
