--- a/conf/c9.conf
+++ b/conf/c9.conf
@@ -15,6 +15,9 @@ user = root
 autostart = true
 autorestart = true
 
+[inet_http_server]
+port = *:9009 ;
+
 [program:nodervisor]
 command = node /nodervisor/app.js
 directory = /nodervisor
